# codex-code-translation

./: CNAME  README.md  asset-manifest.json  index.html
.github/workflows/: ci_cd.yml
client/: .gitignore  README.md  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.tsx  AuditLog.tsx  Auth.tsx  CodeEditor.tsx  ProductList.tsx  index.tsx
client/src/pb/: Audit_logServiceClientPb.ts  ProductsServiceClientPb.ts  TranslationsServiceClientPb.ts  audit_log_pb.d.ts  audit_log_pb.js  products_pb.d.ts  products_pb.js  translations_pb.d.ts  translations_pb.js
proto/: Cargo.toml  Makefile
proto/proto/: audit_log.proto  products.proto  translations.proto
proto/src/: main.rs
server/: Cargo.toml  Dockerfile  Makefile  README.md
server/data/: localhost-key.pem  localhost.pem
server/src/: audit_log.rs  lib.rs  main.rs  openai.rs  products.rs  translations.rs
server/src/pb/: mod.rs  products.rs  translations.rs
static/css/: main.1c5acd7b.chunk.css  main.1c5acd7b.chunk.css.map
static/js/: 2.66db9070.chunk.js  2.66db9070.chunk.js.map  main.2dd2de36.chunk.js  main.2dd2de36.chunk.js.map  main.401aa172.chunk.js  main.401aa172.chunk.js.map  main.6b0b5111.chunk.js  main.6b0b5111.chunk.js.map  main.90f0b49f.chunk.js  main.90f0b49f.chunk.js.map  main.c65e4d3c.chunk.js  main.c65e4d3c.chunk.js.map  main.c85e420e.chunk.js  main.c85e420e.chunk.js.map  main.ed6119e9.chunk.js  main.ed6119e9.chunk.js.map  main.fdf3a084.chunk.js  main.fdf3a084.chunk.js.map  runtime-main.655eeda9.js  runtime-main.655eeda9.js.map
